[gd_scene load_steps=8 format=3 uid="uid://c2ms8arqub7wc"]

[ext_resource type="PackedScene" path="res://Player.tscn" id="1"]
[ext_resource type="Script" path="res://Main.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://ycaoa5u0gs7e" path="res://Mob.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://cbreoapqung27" path="res://HUD.tscn" id="4"]
[ext_resource type="AudioStream" uid="uid://bn1vvm37vscdl" path="res://assets/art/House In a Forest Loop.ogg" id="5"]
[ext_resource type="AudioStream" uid="uid://bb0vxjt4goxkd" path="res://assets/art/gameover.wav" id="6"]

[sub_resource type="Curve2D" id="1"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, -4, 0, 0, 0, 0, 479, 2, 0, 0, 0, 0, 479, 716, 0, 0, 0, 0, -1, 713, 0, 0, 0, 0, 0, -4)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("2")
mob_scene = ExtResource("3")

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.592157, 0.592157, 0.741176, 1)

[node name="HUD" parent="." instance=ExtResource("4")]

[node name="TimeTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Player" parent="." instance=ExtResource("1")]

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("1")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2(0, -4)
rotation = 0.0125254

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5")
volume_db = -18.353

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6")
volume_db = -20.975

[node name="Node" type="Node" parent="."]

[connection signal="milestone" from="." to="." method="_on_Main_milestone"]
[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]
[connection signal="timeout" from="TimeTimer" to="." method="_on_TimeTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
